Погашен технический долг по версии SonarQube